css/contacts.css
/* ... */
.overlay-header-subheadline {
    padding: 91px 46px;
}

.overlay-header-logo {
    height: 66.48px;
    width: auto;
}

.overlay-header-headline {
    font-size: 48px;
}

.overlay-header-row {
    display: flex;
}

.overlay-header-row-right {
    justify-content: right;
    align-items: center;
}

.overlay-header-row-center {
    justify-content: center;
}

.close-btn {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    background-color: transparent;
    border: none;
    padding: 0;
    height: 32px;
    width: 32px;
    position: absolute;
    top: 24px;
    right: 24px;
}

.close-btn::after {
    content: "";
    height: 100%;
    width: 100%;
    background: url("../assets/icons/close_white.svg") no-repeat center center;
}

.close-btn:hover::after {
    background-image: url("../assets/icons/close_white_hover.svg");
    background-size: 24px 24px;
}

.overlay-content {
    display: flex;
    flex-direction: column;
    max-width: 422px;
    margin: auto;
}

.overlay-content-row {
    display: flex;
    ;
}

.input-icon {
    height: 24px;
    width: 24px;
}

.button {
    display: inline-flex;
    cursor: pointer;
    align-items: center;
    border-radius: 8px;
    border: 1px solid transparent;
    padding: 10px 18px;
    gap: 10px;
    font-family: "Open Sans", sans-serif;
    font-size: 23px;
    line-height: 1.2;
    transition: all 100ms ease-in-out;
    height: 48px;
    min-width: 110px;
    justify-content: center;
    text-decoration: none;
    box-sizing: border-box;
}

.button-primary {
    background-color: var(--primaryColor);
    color: var(--secondaryColor);
}

.button-primary:hover {
    background-color: #005DFF;
    box-shadow: 0px 4px 8px 0px #00000033;
}

.button-primary:active {
    background-color: var(--secondaryColor);
    box-shadow: 0px 4px 8px 0px #00000033;
    color: var(--primaryColor);

}

.button-secondary {
    background-color: var(--secondaryColor);
    color: #647188;
    border-color: #647188;
}

.button-secondary:hover {
    border: 2px solid var(--primaryColor);
    box-shadow: 0px 4px 8px 0px #00000033;
    color: var(--primaryColor);
}

.button-secondary:active {
    border: 1px solid #005DFF;
    box-shadow: 0px 4px 8px 0px #00000033;
    color: #005DFF;

}

.button-check {
    padding: 16px 10px;
    gap: 4px;
    min-height: 60px;
    min-width: 174px;
    border-radius: 10px;
}

.button-check > span {
    flex: 1;
}

.button-check::after {
    content: url(../assets/icons/check-primary-button.svg);
    width: 24px;
    height: 24px;
}

.button-check:active:after {
    content: url(../assets/icons/check_blue.svg);
    width: 24px;
    height: 24px;
}

.button-delete {
    padding: 16px 10px;
    gap: 10px;
    min-height: 60px;
    min-width: 106px;
    border-radius: 10px;
}

.overlay {
    position: fixed;
    top: 0;
    right: 0;
    width: 584px;
    height: 100vh;
    background: white;
    transform: translateX(100%);
    transition: transform 125ms ease-in-out;
    z-index: 1000;
    flex-direction: column;
    box-shadow: 0px 0px 4px 0px #00000029;
}

.direction-column {
    flex-direction: column;
    align-items: center;
    gap: 12px;
}

.sub-headline {
    font-size: 27px;
}

.contact-circle img {
    height: 64px;
    width: 64px;
}

.button-cancel {
    padding: 16px 10px;
    gap: 10px;
    min-height: 60px;
    min-width: 136px;
    border-radius: 10px;
}

.button-cancel::after {
    content: url(../assets/icons/cancel-gray.svg);
    width: 24px;
    height: 24px;
}

.button-cancel:hover:after {
    content: url(../assets/icons/cancel-light-blue.svg);
    width: 24px;
    height: 24px;
}

.button-cancel:active:after {
    content: url(../assets/icons/cancel-blue.svg);
    width: 24px;
    height: 24px;
}

.button-contact {
    padding: 16px 10px;
    gap: 10px;
    min-height: 60px;
    min-width: 241px;
    border-radius: 10px;
}

.button-contact::after {
    content: url(../assets/icons/person_add-white.svg);
    width: 32px;
    height: 32px;
}

.button-contact:active:after {
    content: url(../assets/icons/person_add-blue.svg);
    width: 32px;
    height: 32px;
}

.overly-bg {
    height: 100vh;
    width: 100vw;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, .7);
    z-index: 1000;
    display: none;
}

.overly-add-contact {
    border-radius: 30px 0 30px 30px
}

.overlay-add-contact-header {
    border-radius: 30px 0 0 0;
}

.overlay-contact-successfully-created {
    box-shadow: 0px 0px 4px 0px #00000026;
    border-radius: 20px;
    background-color: var(--primaryColor);
    color: var(--secondaryColor);
    display: flex;
    position: fixed;
    padding: 23px 17px;
    left: 50%;
    transform: translate(-50%, 0%);
    align-items: center;
    justify-content: center;
    font-size: var(--fontSize-5);
    transition: all 125ms ease-in-out;
    z-index: 1000;
    bottom: -74px;
}

.overly-move-up {
    transform: translate(-50%, 50%);
    bottom: 50%;
}

.active_span:before {
    content: url("/assets/icons/contacts_icon.png");
    background-color: var(--menuHoverColor);
    display: inline-block;
    vertical-align: middle;
    margin-right: 8px;
    align-items: center;
    gap: 8px;
}

.active_span {
    display: flex;
    align-items: center;
}

@media(max-width:1200px) {
    .active_span::before {
        background-color: transparent;
        color: #4589FF !important;
        content: url("/assets/icons/contacts_icon_blue.png");
        margin-right: 0;
    }
    
    .active_span {   
        flex-direction: column; 
    }
}

